--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -17,7 +17,7 @@
 
 .about__txt-inner {
   width: 65%;
-  padding: 50px; }
+  padding: 100px; }
   .about__txt-inner #drone {
     position: absolute; }
 
@@ -30,8 +30,8 @@
     transform: translateZ(20px); }
   .about__interactive-box .interactive-box__tile {
     position: relative;
-    margin: 5px 5px 25px 5px;
-    height: 100px;
+    margin: 10px;
+    height: 260px;
     background-size: cover;
     border: 5px solid #fff; }
     .about__interactive-box .interactive-box__tile .interactive-box__tile-overlay {
@@ -66,14 +66,11 @@
   min-height: 400px;
   padding: 25px;
   color: #fff;
-  -webkit-box-shadow: -9px 0px 19px -6px #1a356b;
-  -moz-box-shadow: -9px 0px 19px -6px #1a356b;
-  box-shadow: -9px 0px 19px -6px #1a356b; }
+  -webkit-box-shadow: -15px 15px 50px -10px #1a356b;
+  -moz-box-shadow: -15px 15px 50px -10px #1a356b;
+  box-shadow: -15px 15px 50px -10px #1a356b; }
 
 /***************** RWD ****************** */
-@media only screen and (min-width: 1440px) {
-  .about__container {
-    max-width: 80%; } }
 @media only screen and (max-width: 980px) {
   .about__container {
     flex-direction: column; }
