--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -13,7 +13,7 @@
 
 .about__txt-inner
 	width: 65%
-	padding: 50px
+	padding: 100px
 	#drone
 		position: absolute	
 
@@ -26,8 +26,8 @@
 		transform: translateZ(20px)
 	.interactive-box__tile
 		position: relative
-		margin: 5px 5px 25px 5px
-		height: 100px
+		margin: 10px
+		height: 260px
 		background-size: cover
 		border: 5px solid $bg-font-color
 		.interactive-box__tile-overlay
@@ -68,15 +68,12 @@
 		min-height: 400px
 		padding: 25px
 		color: $bg-font-color
-		-webkit-box-shadow: -9px 0px 19px -6px #1a356b
-		-moz-box-shadow: -9px 0px 19px -6px #1a356b
-		box-shadow: -9px 0px 19px -6px #1a356b
+		-webkit-box-shadow: -15px 15px 50px -10px #1a356b
+		-moz-box-shadow: -15px 15px 50px -10px #1a356b
+		box-shadow: -15px 15px 50px -10px #1a356b
 
 
 /***************** RWD *******************/
-@media only screen and (min-width: 1440px)
-	.about__container
-		max-width: 80%
 @media only screen and (max-width: 980px)
 	.about__container
 		flex-direction: column
