--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -2,6 +2,9 @@
 
 #skills
 	min-height: auto
+	padding: 100px 50px 135px
+	.section__heading
+		left: 20px
 
 .bg-img__container
 	position: relative
@@ -60,11 +63,9 @@
 	overflow: hidden
 	position: relative
 	text-align: left
-	-webkit-box-shadow: 0px 10px 25px -9px rgba(30,37,66,1)
-	-moz-box-shadow: 0px 10px 25px -9px rgba(30,37,66,1)
-	box-shadow: 0px 10px 25px -9px rgba(30,37,66,1)
-	outline: 1px solid $bg-font-color
-	outline-offset: -10px
+	-webkit-box-shadow: 0px 10px 40px -10px rgba(30,37,66,1)
+	-moz-box-shadow: 0px 10px 40px -10px rgba(30,37,66,1)
+	box-shadow: 0px 10px 40px -10px rgba(30,37,66,1)
 	*
 		-webkit-transition: all 0.25s ease
 		transition: all 0.25s ease
@@ -78,7 +79,6 @@
 	h3 
 		-webkit-transform: translateY(-100%)
 		transform: translateY(-100%)
-		background-color: $decorative-color
 		top: 0
 		font-weight: 800
 		letter-spacing: -0.4px
@@ -89,7 +89,7 @@
 	p
 		position: absolute
 		width: 100%
-		bottom: 0
+		bottom: 25px
 		padding: 0px 20px
 		opacity: 0
 		text-align: right
