--- a/css/general-css/style.css
+++ b/css/general-css/style.css
@@ -9,6 +9,8 @@ body {
   font-size: 1.2rem; }
   body p {
     margin-bottom: 25px; }
+    body p:last-child {
+      margin-bottom: 0; }
   body p, body a {
     color: #fff;
     text-decoration: none; }
@@ -16,6 +18,7 @@ body {
     border-bottom: 1px dashed #fff; }
 
 section {
+  min-height: 100vh;
   padding: 100px 50px;
   overflow: hidden; }
 
@@ -69,24 +72,6 @@ video {
 .section__heading-right {
   margin-bottom: 40px; }
 
-.section__icon-top {
-  position: relative;
-  margin-top: -10px; }
-  .section__icon-top::before, .section__icon-top::after {
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 1px;
-    background: #fff;
-    bottom: -39%;
-    left: -87%; }
-  .section__icon-top::after {
-    width: 1px;
-    height: 20px;
-    right: 155%;
-    bottom: -67%;
-    left: auto; }
-
 .section__icon-bottom {
   text-align: center;
   color: #9edceb; }
@@ -105,12 +90,12 @@ footer {
     margin-bottom: 0; }
 
 /* RWD *************************** */
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   h1 {
-    font-size: 2.5rem; }
+    font-size: 2rem; }
 
   h2, .menu-item {
-    font-size: 2rem; }
+    font-size: 1.8rem; }
 
   h3 {
     font-size: 1.6rem; }
@@ -119,10 +104,10 @@ footer {
     font-size: 1.2rem; }
 
   h5, a, body {
-    font-size: 1rem; }
+    font-size: 0.8rem; }
 
   h6 {
-    font-size: 0.8rem; }
+    font-size: 0.6rem; }
 
   section {
     padding: 0; } }
