--- a/css/swiper-css/style.css
+++ b/css/swiper-css/style.css
@@ -29,4 +29,8 @@
 .swiper-button-next {
     background-image: url('../../img/svg/right-chevron.svg')!important;
 }
-
+@media only screen and (min-width: 1440px) {
+    .swiper-pagination {
+        bottom: 100px
+    }
+}
