--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -75,7 +75,8 @@
 /***************** RWD ****************** */
 @media only screen and (max-width: 980px) {
   .about__container {
-    flex-direction: column; }
+    flex-direction: column;
+    height: auto; }
 
   #experience .about__txt {
     margin-bottom: 100px; }
