--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -79,6 +79,7 @@
 @media only screen and (max-width: 980px)
 	.about__container
 		flex-direction: column
+		height: auto
 	#experience
 		.about__txt
 			margin-bottom: 100px
