--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -79,7 +79,8 @@
 @media only screen and (max-width: 980px)
 	.about__container
 		flex-direction: column
-		height: auto
+		height: 100%
+		max-height: 100%
 	#experience
 		.about__txt
 			margin-bottom: 100px
