next css update

--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -65,7 +65,7 @@
 #experience
 	.about__interactive-box
 		background: #274195
-		height: 400px
+		min-height: 400px
 		padding: 25px
 		color: $bg-font-color
 		-webkit-box-shadow: -15px 15px 50px -10px #1a356b
