--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -66,6 +66,7 @@
 	.about__interactive-box
 		background: #274195
 		min-height: 400px
+		height: 800px
 		padding: 25px
 		color: $bg-font-color
 		-webkit-box-shadow: -15px 15px 50px -10px #1a356b
