--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -99,6 +99,7 @@
 	.interactive-box__inner-top,
 	.interactive-box__inner-bottom
 		flex-direction: column
+		height: 800px
 
 	.about__interactive-box
 		padding: 50px
