--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -96,8 +96,7 @@
 @media only screen and (max-width: 500px) {
   .interactive-box__inner-top,
   .interactive-box__inner-bottom {
-    flex-direction: column;
-    height: 800px; }
+    flex-direction: column; }
 
   .about__interactive-box {
     padding: 50px; }
