--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -77,7 +77,7 @@
 /***************** RWD *******************/
 @media only screen and (max-width: 980px)
 	.about__container
-		flex-direction: column
+		// flex-direction: column
 	#experience
 		.about__txt
 			margin-bottom: 100px
