--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -73,6 +73,9 @@
 
 /***************** RWD ****************** */
 @media only screen and (max-width: 980px) {
+  .about__container {
+    flex-direction: column; }
+
   #experience .about__txt {
     margin-bottom: 100px; }
 
