--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -31,6 +31,7 @@
   .about__interactive-box .interactive-box__tile {
     position: relative;
     margin: 10px;
+    min-height: 260px;
     height: 260px;
     background-size: cover;
     border: 5px solid #fff; }
@@ -64,7 +65,6 @@
 #experience .about__interactive-box {
   background: #274195;
   min-height: 400px;
-  height: 800px;
   padding: 25px;
   color: #fff;
   -webkit-box-shadow: -15px 15px 50px -10px #1a356b;
