--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -27,6 +27,7 @@
 	.interactive-box__tile
 		position: relative
 		margin: 10px
+		min-height: 260px
 		height: 260px
 		background-size: cover
 		border: 5px solid $bg-font-color
@@ -66,7 +67,6 @@
 	.about__interactive-box
 		background: #274195
 		min-height: 400px
-		height: 800px
 		padding: 25px
 		color: $bg-font-color
 		-webkit-box-shadow: -15px 15px 50px -10px #1a356b
