--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -23,6 +23,7 @@
     width: 35%; }
 
 #contact {
+  min-height: auto;
   background: url("../../img/cracow.jpg") no-repeat 300px/cover; }
   #contact::after {
     content: "";
