--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -25,6 +25,7 @@
 		width: 35%
 
 #contact
+	min-height: auto
 	background: url('../../img/cracow.jpg') no-repeat 300px /cover
 	&::after
 		content: ''
