--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -110,7 +110,7 @@
       margin-bottom: 0; }
 
 .hero__layer-inner {
-  background-image: url("../../img/svg/window.svg");
+  background-image: url("../../img/svg/square-tile.svg");
   transform-style: preserve-3d; }
 
 /* RWD *************************** */
