--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -111,7 +111,7 @@
 			text-align: right
 			margin-bottom: 0
 .hero__layer-inner
-	background-image: url("../../img/svg/window.svg")
+	background-image: url("../../img/svg/square-tile.svg")
 	transform-style: preserve-3d
 	
 
