--- a/css/general-css/style.css
+++ b/css/general-css/style.css
@@ -112,6 +112,6 @@ footer {
   #about,
   #experience,
   #contact {
-    pading: 0; } }
+    padding: 0; } }
 
 /*# sourceMappingURL=style.css.map */
