--- a/css/general-css/style.css
+++ b/css/general-css/style.css
@@ -110,8 +110,7 @@ footer {
     font-size: 0.6rem; }
 
   #about,
-  #experience,
-  #contact {
+  #experience {
     padding: 0; } }
 
 /*# sourceMappingURL=style.css.map */
