--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -86,7 +86,7 @@
 	.about__interactive-box
 		width: 100%
 		margin-left: 0
-		padding: 100px 50px 0
+		padding: 100px 50px
 		text-align: center
 		.interactive-box__tile
 			.interactive-box__tile-overlay a
