--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -85,7 +85,7 @@
   .about__interactive-box {
     width: 100%;
     margin-left: 0;
-    padding: 100px 50px;
+    padding: 100px 50px 0;
     text-align: center; }
     .about__interactive-box .interactive-box__tile .interactive-box__tile-overlay a {
       opacity: 1;
@@ -93,6 +93,9 @@
 
   .hide-mobile {
     display: none; } }
+@media only screen and (max-width: 600px) {
+  .about__interactive-box {
+    padding: 100px 50px; } }
 @media only screen and (max-width: 500px) {
   .interactive-box__inner-top,
   .interactive-box__inner-bottom {
