--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -82,7 +82,13 @@
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
-            flex-direction: column; }
+            flex-direction: column;
+            min-height: 1000px;
+            height: 1000px;
+            -webkit-box-flex: 1;
+            -webkit-flex: 1 1 1000px;
+                -ms-flex: 1 1 1000px;
+                    flex: 1 1 1000px; }
 
   #experience .about__txt {
     margin-bottom: 100px; }
