--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -69,7 +69,8 @@
 
 #experience .about__interactive-box {
   background: #274195;
-  min-height: 400px;
+  min-height: 1400px;
+  height: 1400px;
   padding: 25px;
   color: #fff;
   -webkit-box-shadow: -15px 15px 50px -10px #1a356b;
@@ -116,9 +117,7 @@
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
-            flex-direction: column;
-    min-height: 1400px;
-    height: 1400px;}
+            flex-direction: column;}
 
   .about__interactive-box {
     padding: 50px; }
