css update for safar

--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -78,6 +78,7 @@
 @media only screen and (max-width: 980px)
 	.about__container
 		flex-direction: column
+
 	#experience
 		.about__txt
 			margin-bottom: 100px
@@ -85,6 +86,8 @@
 		width: 100%
 	.about__interactive-box
 		width: 100%
+		min-height: 730px
+		height: 730px
 		margin-left: 0
 		padding: 100px 50px 0
 		text-align: center
