--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -82,12 +82,13 @@
 	#experience
 		.about__txt
 			margin-bottom: 100px
+		.about__interactive-box
+			min-height: 730px
+			height: 730px
 	.about__txt-inner
 		width: 100%
 	.about__interactive-box
 		width: 100%
-		min-height: 730px
-		height: 730px
 		margin-left: 0
 		padding: 100px 50px 0
 		text-align: center
