--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -81,10 +81,10 @@
 
 	#experience
 		.about__txt
+			min-height: 780px
 			margin-bottom: 100px
 		.about__interactive-box
 			min-height: 740px
-			height: 740px
 	.about__txt-inner
 		width: 100%
 	.about__interactive-box
@@ -104,8 +104,7 @@
 		padding: 100px 50px
 
 @media only screen and (max-width: 500px)
-	.interactive-box__inner-top,
-	.interactive-box__inner-bottom
+	.interactive-box__inner-top
 		flex-direction: column
 
 	.about__interactive-box
