--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -81,10 +81,7 @@
 
 	#experience
 		.about__txt
-			min-height: 780px
 			margin-bottom: 100px
-		.about__interactive-box
-			min-height: 740px
 	.about__txt-inner
 		width: 100%
 	.about__interactive-box
@@ -104,6 +101,11 @@
 		padding: 100px 50px
 
 @media only screen and (max-width: 500px)
+	#experience
+		.about__txt
+			min-height: 780px
+		.about__interactive-box
+			min-height: 740px
 	.interactive-box__inner-top
 		flex-direction: column
 
