--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -77,10 +77,7 @@
     flex-direction: column; }
 
   #experience .about__txt {
-    min-height: 780px;
     margin-bottom: 100px; }
-  #experience .about__interactive-box {
-    min-height: 740px; }
 
   .about__txt-inner {
     width: 100%; }
@@ -100,6 +97,11 @@
   .about__interactive-box {
     padding: 100px 50px; } }
 @media only screen and (max-width: 500px) {
+  #experience .about__txt {
+    min-height: 780px; }
+  #experience .about__interactive-box {
+    min-height: 740px; }
+
   .interactive-box__inner-top {
     flex-direction: column; }
 
