--- a/css/preloader-css/style.css
+++ b/css/preloader-css/style.css
@@ -28,7 +28,7 @@
     width: 40%;
     height: 40%;
     position: absolute;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
     animation: spin 2s ease infinite;
 }
 
