--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -99,13 +99,12 @@
 @media only screen and (max-width: 600px)
 	.about__interactive-box
 		padding: 100px 50px
-
 @media only screen and (max-width: 500px)
 	#experience
 		.about__txt
 			min-height: 780px
 		.about__interactive-box
-			min-height: 740px
+			min-height: 787px//iphone flexbox bug fix
 	.interactive-box__inner-top
 		flex-direction: column
 
