--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -78,7 +78,6 @@
 @media only screen and (max-width: 980px)
 	.about__container
 		flex-direction: column
-
 	#experience
 		.about__txt
 			margin-bottom: 100px
@@ -114,3 +113,4 @@
 			margin: 20px
 	.about__txt-inner
 		padding: 100px 50px
+		min-height: 1000px
