--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -111,6 +111,7 @@
       margin: 20px; }
 
   .about__txt-inner {
-    padding: 100px 50px; } }
+    padding: 100px 50px;
+    min-height: 1000px; } }
 
 /*# sourceMappingURL=style.css.map */
