--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -97,10 +97,12 @@
   .about__interactive-box {
     padding: 100px 50px; } }
 @media only screen and (max-width: 500px) {
-  #experience .about__txt {
-    min-height: 810px; }
-  #experience .about__interactive-box {
-    min-height: 787px; }
+  #experience {
+    min-height: 1000px; }
+    #experience .about__txt {
+      min-height: 810px; }
+    #experience .about__interactive-box {
+      min-height: 787px; }
 
   .interactive-box__inner-top {
     flex-direction: column; }
