--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -100,6 +100,7 @@
 		padding: 100px 50px
 @media only screen and (max-width: 500px)
 	#experience
+		min-height: 1000px
 		.about__txt
 			min-height: 810px
 		.about__interactive-box
