--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -97,12 +97,10 @@
   .about__interactive-box {
     padding: 100px 50px; } }
 @media only screen and (max-width: 500px) {
-  #experience {
-    min-height: 1000px; }
-    #experience .about__txt {
-      min-height: 810px; }
-    #experience .about__interactive-box {
-      min-height: 787px; }
+  #experience .about__txt {
+    min-height: 810px; }
+  #experience .about__interactive-box {
+    min-height: 740px; }
 
   .interactive-box__inner-top {
     flex-direction: column; }
@@ -113,7 +111,6 @@
       margin: 20px; }
 
   .about__txt-inner {
-    padding: 100px 50px;
-    min-height: 1000px; } }
+    padding: 100px 50px; } }
 
 /*# sourceMappingURL=style.css.map */
