--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -99,7 +99,8 @@
 @media only screen and (max-width: 500px) {
   #experience .about__txt {
     min-height: 810px; }
-  #experience .about__interactive-box {
+
+  .about__interactive-box {
     min-height: 740px; }
 
   .interactive-box__inner-top {
