--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -101,8 +101,11 @@
 
 @media only screen and (max-width: 500px)
 	#experience
+		min-height: 1500px
 		.about__txt
-			min-height: 810px
+			min-height: 1500px
+			.about__txt-inner
+				min-height: 1500px
 		.about__interactive-box
 			min-height: 787px
 	.interactive-box__inner-top
