--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -101,9 +101,9 @@
 
 @media only screen and (max-width: 500px)
 	#experience
-		min-height: 1500px
+		// min-height: 1500px
 		.about__txt
-			min-height: 1500px
+			// min-height: 1500px
 			.about__txt-inner
 				min-height: 1500px
 		.about__interactive-box
