--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -97,7 +97,7 @@
   .about__interactive-box {
     padding: 100px 50px; } }
 @media only screen and (max-width: 500px) {
-  #experience .about__txt .about__txt-inner {
+  #experience .about__txt {
     min-height: 1500px; }
   #experience .about__interactive-box {
     min-height: 787px; }
