--- a/css/about-section-css/style.sass
+++ b/css/about-section-css/style.sass
@@ -103,7 +103,7 @@
 	#experience
 		// min-height: 1500px
 		.about__txt
-			min-height: 1500px
+			// min-height: 1500px
 			.about__txt-inner
 				// min-height: 1500px
 		.about__interactive-box
