--- a/css/about-section-css/style.css
+++ b/css/about-section-css/style.css
@@ -98,7 +98,7 @@
     padding: 100px 50px; } }
 @media only screen and (max-width: 500px) {
   #experience .about__interactive-box {
-    min-height: 787px; }
+    min-height: 100%; }
 
   .interactive-box__inner-top {
     flex-direction: column; }
