skills section update

--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -8,17 +8,18 @@
 
 .bg-img__container
 	position: relative
-	background: url('../../img/abstract.jpg') no-repeat center /cover fixed
+	// background: url('../../img/abstract.jpg') no-repeat center /cover fixed
 	&::before
 		position: absolute
 		content: ""
 		width: 100%
-		height: 100%
+		height: 45%
 		left: 0
-		top: 0
+		// top: 0
 		right: 0
 		bottom: 0
-		background: $hero-overlay-color
+		// background: $hero-overlay-color
+		@include bg-gradient(#353795, #144F96)
 	.bg-img__container-inner
 		position: relative
 		z-index: 9
