--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -5,18 +5,22 @@
     left: 20px; }
 
 .bg-img__container {
-  position: relative;
-  background: url("../../img/abstract.jpg") no-repeat center/cover fixed; }
+  position: relative; }
   .bg-img__container::before {
     position: absolute;
     content: "";
     width: 100%;
-    height: 100%;
+    height: 45%;
     left: 0;
-    top: 0;
     right: 0;
     bottom: 0;
-    background: rgba(52, 55, 149, 0.65); }
+    background: #353795;
+    background: -moz-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: -webkit-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: -o-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
+    background: linear-gradient(to right, #353795 0%, #144F96 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); }
   .bg-img__container .bg-img__container-inner {
     position: relative;
     z-index: 9;
