--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -2,9 +2,13 @@
 
 #skills
 	min-height: auto
-	padding: 100px 50px 135px
+	padding: 0 50px 135px
 	.section__heading
-		left: 20px
+		left: 50%;
+		transform: translateX(-50%);
+		width: 240px;
+		h2
+			color: $decorative-color
 
 .bg-img__container
 	position: relative
