--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -4,9 +4,9 @@
 	min-height: auto
 	padding: 0 50px 135px
 	.section__heading
-		left: 50%;
-		transform: translateX(-50%);
-		width: 240px;
+		left: 50%
+		transform: translateX(-50%)
+		width: 240px
 		h2
 			color: $decorative-color
 
