--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -45,27 +45,28 @@
     background: -ms-linear-gradient(left, #353795 0%, #144F96 100%);
     background: linear-gradient(to right, #353795 0%, #144F96 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); }
-  #contact .bg-img__container::before {
-    top: 0;
-    background: rgba(52, 55, 149, 0.65); }
-  #contact .bg-img__container-avatar {
-    position: absolute;
-    top: 50%;
-    left: 140%;
-    transform: translate(-50%, -50%);
-    width: 300px;
-    height: 300px;
-    background: #1d4996;
+
+.bg-img__container::before {
+  top: 0;
+  background: rgba(52, 55, 149, 0.65); }
+.bg-img__container .bg-img__container-avatar {
+  position: absolute;
+  top: 50%;
+  left: 140%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 300px;
+  background: #1d4996;
+  border-radius: 50%;
+  -webkit-box-shadow: 10px 0px 20px -8px #133183;
+  -moz-box-shadow: 10px 0px 20px -8px #133183;
+  box-shadow: 10px 0px 20px -8px #133183; }
+  .bg-img__container .bg-img__container-avatar img {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
-    -webkit-box-shadow: 10px 0px 20px -8px #133183;
-    -moz-box-shadow: 10px 0px 20px -8px #133183;
-    box-shadow: 10px 0px 20px -8px #133183; }
-    #contact .bg-img__container-avatar img {
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      border: 20px solid #1c4996; }
+    border: 20px solid #1c4996; }
 
 .skill {
   background: #353795;
