--- a/css/swiper-css/style.css
+++ b/css/swiper-css/style.css
@@ -33,3 +33,7 @@
 .swiper-button-next {
     background-image: url('../../img/svg/right-chevron.svg')!important;
 }
+.swiper-button-next, .swiper-button-prev {
+    top: auto;
+    bottom: -56px;
+}
