--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -43,12 +43,12 @@
 			position: absolute
 			content: ""
 			width: 100%
-			height: 45%
+			height: 100%%
 			left: 0
 			top: 0
 			right: 0
 			bottom: 0
-			@include bg-gradient(#353795, #144F96)
+			background: $hero-overlay-color
 
 	.bg-img__container-avatar
 		position: absolute
