--- a/css/header-css/style.sass
+++ b/css/header-css/style.sass
@@ -97,7 +97,7 @@
 	height: 100%
 	background-size: cover
 	background-position: left
-	background-image: url("../../img/svg/square-hole.svg")
+	background: $hero-overlay-color //-image: url("../../img/svg/square-hole.svg")
 .hero__layer-outer
 	overflow: hidden
 	transition: all .7s ease-in-out
