--- a/css/header-css/style.css
+++ b/css/header-css/style.css
@@ -94,7 +94,7 @@
   height: 100%;
   background-size: cover;
   background-position: left;
-  background: rgba(52, 55, 149, 0.65); }
+  background-image: url("../../img/svg/square-hole.svg"); }
 
 .hero__layer-outer {
   overflow: hidden;
