--- a/css/swiper-css/style.css
+++ b/css/swiper-css/style.css
@@ -18,7 +18,6 @@
 	bottom: -40px
 }
 .swiper-pagination-clickable .swiper-pagination-bullet {
-    /*padding: 5px;*/
     margin: 2px;
 }
 .swiper-button-prev {
@@ -28,10 +27,10 @@
     right: -35px!important;
 }
 .swiper-button-prev {
-    background-image: url('../../img/svg/left-chevron.svg')!important;
+    background-image: url('../../img/svg/arrow-left.svg')!important;
 }
 .swiper-button-next {
-    background-image: url('../../img/svg/right-chevron.svg')!important;
+    background-image: url('../../img/svg/arrow-right.svg')!important;
 }
 .swiper-button-next, .swiper-button-prev {
     top: auto;
