--- a/css/skills-section-css/style.css
+++ b/css/skills-section-css/style.css
@@ -1,6 +1,6 @@
 #skills {
   min-height: auto;
-  padding: 0 50px 135px; }
+  padding: 100px 50px 135px; }
   #skills .section__heading {
     left: 50%;
     transform: translateX(-50%);
