--- a/css/skills-section-css/style.sass
+++ b/css/skills-section-css/style.sass
@@ -2,7 +2,7 @@
 
 #skills
 	min-height: auto
-	padding: 0 50px 135px
+	padding: 100px 50px 135px
 	.section__heading
 		left: 50%
 		transform: translateX(-50%)
